# ros2_mujoco

./: CMakeLists.txt  README.md  package.xml  requirements.txt
config/: robot.rviz
launch/: robot.launch.py  simple_robot.launch.py
models/: README.md  update_kanuopu-robot.urdf
models/meshes/: BASE_S.STL  L_ELBOW_Y_S.STL  L_SHOUDLER_R_S.STL  L_SHOULDER_Y_S.STL  L_WRIST_P_S.STL  NECK_P_S.STL  UP-DOWN_S.STL
models/models/: ti5robot.xml
models/models/meshes/: L_SHOULDER_P_S.STL  L_WRIST_Y_S.STL  NECK_R_S.STL  NECK_Y_S.STL  R_ELBOW_Y_S.STL  R_SHOULDER_P_S.STL  R_SHOULDER_R_S.STL  R_SHOULDER_Y_S.STL  R_WRIST_P_S.STL  R_WRIST_Y_S.STL  WAIST_P_S.STL  WAIST_R_S.STL  WAIST_Y_S.STL
resource/: ros2_mujoco_robot
ros2_mujoco_robot/: __init__.py  mujocoRos2Simulator.py  setup.py  simple_robot_controller.py
scripts/: simple_test.py  test.py
